Fix topic modal bug and img overflow

--- a/學生版/css/index.css
+++ b/學生版/css/index.css
@@ -165,23 +165,55 @@
     width: 100%;
   }
 }
-.scienceLiteracy_history_topic_modal img {
-  image-rendering: -moz-crisp-edges; /* Firefox */
-  image-rendering: -o-crisp-edges; /* Opera */
-  image-rendering: -webkit-optimize-contrast; /*Webkit (non-standard naming) */
-  image-rendering: crisp-edges;
-  -ms-interpolation-mode: nearest-neighbor; /* IE (non-standard property) */
+.topic_modal_title {
+  text-align: left;
+  padding: 20px;
+  font-size: 14px;
+  background: var(--main-bright);
+  border-radius: 15px;
+}
+.topic_modal_title .topic_modal_sub_title {
+  font-size: 14px;
+  border-bottom: 6px solid var(--main-color);
+}
+
+.scienceLiteracy_history_topic_modal .question {
+  border-bottom: 4px dashed var(--main-color);
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+  overflow: auto;
+  width: 100%;
+}
+.scienceLiteracy_history_topic_modal .question span, .scienceLiteracy_history_topic_modal .answer span {
+  padding: 10px 31px;
+  margin: 10px auto;
+  display: inline-block;
+  background: var(--secondary-color);
+  border-radius: 27px;
+  font-weight: bold;
+  font-size: 14px;
 }
 .scienceLiteracy_history_topic_modal .question_img {
   width: 100%;
 }
+.scienceLiteracy_history_topic_modal .solution_img {
+  width: 80%;
+}
 
 @media (min-width: 1100px) {
-  .scienceLiteracy_history_topic_modal {
-    width: 40vw;
+  .topic_modal_title {
+    text-align: left;
+    padding: 20px;
+    font-size: 25px;
+    background: var(--main-bright);
+    border-radius: 15px;
   }
-  .scienceLiteracy_history_topic_modal .question_img {
-    width: unset;
+  .topic_modal_title .topic_modal_sub_title {
+    font-size: 25px;
+    border-bottom: 6px solid var(--main-color);
+  }
+  .scienceLiteracy_history_topic_modal .question span, .scienceLiteracy_history_topic_modal .answer span {
+    font-size: 20px;
   }
 }
 .scienceLiteracy-history-row.active .scienceLiteracy-history-row-title {
@@ -906,6 +938,10 @@ html {
   display: block;
   width: 60%;
   margin: auto;
+}
+
+.ModalBoxBig .ModalBoxDetailTitle {
+  border-bottom: 0px;
 }
 
 @media (min-width: 768px) {
