--- a/學生版/css/_scienceLiteracy.scss
+++ b/學生版/css/_scienceLiteracy.scss
@@ -115,6 +115,7 @@
     }
 
     .row-data-table-data {
+      padding: 5px 0px;
       display: grid;
       grid-template-columns: 0.3fr 1fr 0.3fr;
       grid-gap: 10px;
@@ -125,6 +126,7 @@
       }
       & h4,
       p {
+        // height: 100%;
         font-size: 13px;
         word-break: break-all;
         word-wrap: break-word;
@@ -145,6 +147,9 @@
 
       &.history-data {
         display: none;
+        &.bg-light {
+          background-color: #fffcef;
+        }
       }
     }
   }
@@ -209,27 +214,45 @@
   }
 
   .scienceLiteracy-history-row-data {
-    grid-template-columns: 100px 4fr;
+    grid-template-columns: 135px 4fr;
     grid-gap: 10px;
+
+    & .row-data-title,
+    & .row-data-content {
+      font-size: 16px;
+    }
 
     .row-data-table {
       grid-column: 1/3;
       .row-data-table-title {
         grid-gap: 10px;
-        grid-template-columns: 100px 1fr 0.2fr 0.2fr;
+        grid-template-columns: 135px 1fr 0.2fr 0.2fr;
         & h4 {
           margin-bottom: 12px;
+          font-size: 16px;
+
+          &:nth-child(1),
+          &:nth-child(3),
+          &:nth-child(4) {
+            text-align: center;
+          }
         }
       }
       .row-data-table-data {
-        grid-template-columns: 100px 1fr 0.2fr 0.2fr;
-        p {
-          font-size: 15px;
+        grid-template-columns: 135px 1fr 0.2fr 0.2fr;
+        & p {
+          font-size: 16px;
+          &:nth-last-child(1) {
+            text-align: center;
+          }
         }
         & button {
           margin: 0;
           font-size: 15px;
           height: 30px;
+        }
+        & img {
+          margin: auto;
         }
       }
     }
