--- a/學生版/css/index.css
+++ b/學生版/css/index.css
@@ -314,6 +314,7 @@
   display: grid;
 }
 .scienceLiteracy-history-row-data .row-data-table .row-data-table-data {
+  padding: 5px 0px;
   display: grid;
   grid-template-columns: 0.3fr 1fr 0.3fr;
   grid-gap: 10px;
@@ -341,6 +342,9 @@
 }
 .scienceLiteracy-history-row-data .row-data-table .row-data-table-data.history-data {
   display: none;
+}
+.scienceLiteracy-history-row-data .row-data-table .row-data-table-data.history-data.bg-light {
+  background-color: #fffcef;
 }
 .scienceLiteracy-history-row-data .row-data-more {
   height: 30px;
@@ -382,29 +386,42 @@
     grid-template-columns: 1fr 1fr 0.3fr;
   }
   .scienceLiteracy-history-row-data {
-    grid-template-columns: 100px 4fr;
+    grid-template-columns: 135px 4fr;
     grid-gap: 10px;
+  }
+  .scienceLiteracy-history-row-data .row-data-title, .scienceLiteracy-history-row-data .row-data-content {
+    font-size: 16px;
   }
   .scienceLiteracy-history-row-data .row-data-table {
     grid-column: 1/3;
   }
   .scienceLiteracy-history-row-data .row-data-table .row-data-table-title {
     grid-gap: 10px;
-    grid-template-columns: 100px 1fr 0.2fr 0.2fr;
+    grid-template-columns: 135px 1fr 0.2fr 0.2fr;
   }
   .scienceLiteracy-history-row-data .row-data-table .row-data-table-title h4 {
     margin-bottom: 12px;
+    font-size: 16px;
+  }
+  .scienceLiteracy-history-row-data .row-data-table .row-data-table-title h4:nth-child(1), .scienceLiteracy-history-row-data .row-data-table .row-data-table-title h4:nth-child(3), .scienceLiteracy-history-row-data .row-data-table .row-data-table-title h4:nth-child(4) {
+    text-align: center;
   }
   .scienceLiteracy-history-row-data .row-data-table .row-data-table-data {
-    grid-template-columns: 100px 1fr 0.2fr 0.2fr;
+    grid-template-columns: 135px 1fr 0.2fr 0.2fr;
   }
   .scienceLiteracy-history-row-data .row-data-table .row-data-table-data p {
-    font-size: 15px;
+    font-size: 16px;
+  }
+  .scienceLiteracy-history-row-data .row-data-table .row-data-table-data p:nth-last-child(1) {
+    text-align: center;
   }
   .scienceLiteracy-history-row-data .row-data-table .row-data-table-data button {
     margin: 0;
     font-size: 15px;
     height: 30px;
+  }
+  .scienceLiteracy-history-row-data .row-data-table .row-data-table-data img {
+    margin: auto;
   }
   .scienceLiteracy-history-row-data .row-data-more {
     grid-column: 1/3;
