--- a/學生版/css/_utinity.scss
+++ b/學生版/css/_utinity.scss
@@ -38,6 +38,18 @@
   margin-top: 1rem;
 }
 
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
+.mb-3 {
+  margin-bottom: 1rem;
+}
+
 .md-d-none {
   display: block;
 }
