--- a/學生版/css/index.css
+++ b/學生版/css/index.css
@@ -1,4 +1,64 @@
 @charset "UTF-8";
+.CustomModalBox {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+  overflow-y: auto;
+  outline: 0;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+.CustomModalBox.hide {
+  display: none;
+}
+.CustomModalBox .CustomModalBox-container {
+  position: relative;
+  width: auto;
+  margin: 0.5rem;
+  pointer-events: none;
+}
+.CustomModalBox .CustomModalBox-container .CustomModalBox-body {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  pointer-events: auto;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 0.3rem;
+  outline: 0;
+}
+.CustomModalBox .CustomModalBox-container .CustomModalBox-body .CustomModalBox-title {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  padding: 1rem;
+  border-bottom: 1px solid #e9ecef;
+  border-top-left-radius: 0.3rem;
+  border-top-right-radius: 0.3rem;
+}
+.CustomModalBox .CustomModalBox-container .CustomModalBox-body .CustomModalBox-content {
+  position: relative;
+  flex: 1 1 auto;
+  padding: 1rem;
+}
+.CustomModalBox .CustomModalBox-container .CustomModalBox-body .CustomModalBox-footer {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  padding: 1rem;
+  border-top: 1px solid #e9ecef;
+}
+
+@media (min-width: 768px) {
+  .CustomModalBox .CustomModalBox-container {
+    margin: 1.75rem auto;
+    max-width: 80vw;
+  }
+}
 :root {
   --border-color: #e5e5e5;
 }
@@ -214,6 +274,53 @@
   }
   .scienceLiteracy_history_topic_modal .question span, .scienceLiteracy_history_topic_modal .answer span {
     font-size: 20px;
+  }
+}
+.scienceLiteracy_topic_status_modal {
+  width: 80vw;
+  max-height: 70vh;
+}
+.scienceLiteracy_topic_status_modal .literacy ul {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-column-gap: 10px;
+  grid-row-gap: 10px;
+}
+.scienceLiteracy_topic_status_modal .literacy ul li a {
+  max-width: 80vw;
+  display: block;
+  height: 40px;
+  line-height: 38px;
+  padding-right: 35px;
+  padding-left: 14px;
+  background: #1481b6;
+  color: #fff;
+  font-size: 17px;
+  position: relative;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  border-radius: 8px;
+}
+.scienceLiteracy_topic_status_modal .literacy ul li a i {
+  color: #fff;
+}
+.scienceLiteracy_topic_status_modal .literacy ul li a:hover {
+  background: #419b34;
+}
+.scienceLiteracy_topic_status_modal .literacy ul li a:hover i {
+  color: #fff;
+}
+
+@media (min-width: 1262px) {
+  .scienceLiteracy_topic_status_modal .literacy ul {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media (min-width: 768px) and (max-width: 1261px) {
+  .scienceLiteracy_topic_status_modal .literacy ul {
+    max-width: 30vw;
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 .scienceLiteracy-history-row.active .scienceLiteracy-history-row-title {
@@ -465,6 +572,18 @@
 
 .mt-3 {
   margin-top: 1rem;
+}
+
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
+.mb-3 {
+  margin-bottom: 1rem;
 }
 
 .md-d-none {
@@ -794,6 +913,18 @@ canvas {
 
 .mt-3 {
   margin-top: 1rem;
+}
+
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
+.mb-3 {
+  margin-bottom: 1rem;
 }
 
 .md-d-none {
