Add custom modal  box js and fix some box style

--- a/學生版/css/_customModalBox.scss
+++ b/學生版/css/_customModalBox.scss
@@ -34,7 +34,7 @@
       & .CustomModalBox-title {
         display: flex;
         align-items: flex-start;
-        justify-content: space-between;
+        justify-content: center;
         padding: 1rem;
         border-bottom: 1px solid #e9ecef;
         border-top-left-radius: 0.3rem;
@@ -50,7 +50,7 @@
       & .CustomModalBox-footer {
         display: flex;
         align-items: center;
-        justify-content: flex-end;
+        justify-content: center;
         padding: 1rem;
         border-top: 1px solid #e9ecef;
       }
