Finish custom modal box and topic status modal

--- a/學生版/css/_customModalBox.scss
+++ b/學生版/css/_customModalBox.scss
@@ -19,6 +19,13 @@
     margin: 0.5rem;
     pointer-events: none;
 
+    & .CustomModalBox-x {
+      position: absolute;
+      right: 30px;
+      top: 25px;
+      cursor: pointer;
+    }
+
     & .CustomModalBox-body {
       position: relative;
       display: flex;
@@ -45,6 +52,8 @@
         position: relative;
         flex: 1 1 auto;
         padding: 1rem;
+        max-height: 70vh;
+        overflow-x: auto;
       }
 
       & .CustomModalBox-footer {
@@ -64,6 +73,10 @@
     & .CustomModalBox-container {
       margin: 1.75rem auto;
       max-width: 80vw;
+
+      & .CustomModalBox-content {
+        margin-bottom: 20px;
+      }
     }
   }
 }
