--- a/教師版/css/index.css
+++ b/教師版/css/index.css
@@ -378,7 +378,7 @@
   display: grid;
   padding: 10px;
   padding-bottom: 15px;
-  background-color: #edf9fa;
+  background-color: var(--main-bright);
   grid-template-columns: 1fr;
   grid-gap: 10px;
 }
@@ -458,7 +458,7 @@
   display: none;
 }
 .scienceLiteracy-history-row-data .row-data-table .row-data-table-data.history-data.bg-light {
-  background-color: #d8f9fc;
+  background-color: var(--main-light);
 }
 .scienceLiteracy-history-row-data .row-data-more {
   height: 30px;
