--- a/學生版/css/index.css
+++ b/學生版/css/index.css
@@ -460,6 +460,21 @@
 .scienceLiteracy-history-row-data .row-data-table .row-data-table-data.history-data.bg-light {
   background-color: #fffcef;
 }
+.scienceLiteracy-history-row-data .row-data-table .row-data-table-data.history-data.bg-light span:nth-child(1),
+.scienceLiteracy-history-row-data .row-data-table .row-data-table-data.history-data.bg-light span:nth-child(2) {
+  position: relative;
+  height: 100%;
+}
+.scienceLiteracy-history-row-data .row-data-table .row-data-table-data.history-data.bg-light span:nth-child(1)::after,
+.scienceLiteracy-history-row-data .row-data-table .row-data-table-data.history-data.bg-light span:nth-child(2)::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: -3px;
+  bottom: -10px;
+  top: -10px;
+  background-color: var(--secondary-light);
+}
 .scienceLiteracy-history-row-data .row-data-more {
   height: 30px;
   font-size: 12px;
@@ -484,7 +499,7 @@
   }
   .scienceLiteracy-history-row-data .row-data-table .row-data-table-data button {
     margin: 0;
-    font-size: 15px;
+    font-size: 15 px;
     height: 30px;
   }
   .scienceLiteracy-history-row-data .row-data-more {
