--- a/教師版/css/_scienceLiteracy.scss
+++ b/教師版/css/_scienceLiteracy.scss
@@ -149,6 +149,22 @@
         display: none;
         &.bg-light {
           background-color: var(--main-light);
+          span:nth-child(1),
+          span:nth-child(2) {
+            position: relative;
+            height: 100%;
+          }
+          span:nth-child(1)::after,
+          span:nth-child(2)::after {
+            content: "";
+            position: absolute;
+            left: 0;
+            right: -3px;
+            bottom: -10px;
+            top: -10px;
+            // width: 100%;
+            background-color: var(--main-bright);
+          }
         }
       }
     }
