Finish single student teacher version

--- a/教師版/css/_scienceLiteracy.scss
+++ b/教師版/css/_scienceLiteracy.scss
@@ -16,7 +16,7 @@
 .scienceLiteracy-history-big-title,
 .scienceLiteracy-history-row-title {
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: 1fr 0.8fr;
   align-items: center;
   border: 1px solid var(--main-dark);
   padding: 10px 2px 10px 20px;
@@ -31,7 +31,7 @@
 }
 
 .scienceLiteracy-history-row-title {
-  grid-template-columns: 1fr 0.3fr;
+  grid-template-columns: 1fr 0.5fr 0.3fr;
   cursor: pointer;
   & h4 {
     font-weight: normal;
@@ -194,6 +194,7 @@
 @media (min-width: 768px) {
   .scienceLiteracy-history-big-title,
   .scienceLiteracy-history-row-title {
+    grid-template-columns: 2fr 1fr 0.8fr;
     & h4 {
       font-size: 19px;
     }
@@ -222,11 +223,11 @@
 
 @media (min-width: 1024px) {
   .scienceLiteracy-history-big-title {
-    grid-template-columns: 1fr 1fr 0.3fr;
+    grid-template-columns: 1fr 1fr 1fr;
   }
 
   .scienceLiteracy-history-row-title {
-    grid-template-columns: 1fr 1fr 0.3fr;
+    grid-template-columns: 1.3fr 1.3fr 1fr 0.3fr;
   }
 
   .scienceLiteracy-history-row-data {
