--- a/教師版/css/_customModalBox.scss
+++ b/教師版/css/_customModalBox.scss
@@ -60,7 +60,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        padding: 1rem;
+        // padding: 1rem;
         border-top: 1px solid #e9ecef;
       }
     }
