--- a/教師版/css/_downloadModal.scss
+++ b/教師版/css/_downloadModal.scss
@@ -7,13 +7,13 @@
   grid-template-columns: 1fr;
   grid-gap: 20px;
   margin: 0;
-  padding: 20px 10px 20px 10px;
+  // padding: 20px 10px 20px 10px;
 }
 
 .filterBox-group {
   display: flex;
   flex-direction: column;
-  width: 80vw;
+  width: 100%;
   margin: 0 auto;
   & h4 {
     font-size: 14px;
@@ -22,7 +22,9 @@
 }
 
 .filterBox {
-  height: 100%;
+  height: 60vh;
+  display: flex;
+  flex-direction: column;
   border: 1px solid var(--border-color);
 
   .filterBox-input-group {
@@ -81,7 +83,6 @@
   }
 
   & .filterBox-checkBox-group-list {
-    height: 45vh;
     overflow-y: auto;
     font-size: 14px;
     & .filterBox-checkBox-group {
@@ -91,7 +92,7 @@
 
       & label {
         display: block;
-        width: 100%;
+        max-width: 60vw;
         overflow: hidden;
         word-wrap: break-word;
         white-space: nowrap;
@@ -114,15 +115,34 @@
       }
     }
   }
+
+  & .filterbox-selector {
+    font-size: 14px;
+    select {
+      padding: 10px 20px;
+      font-size: inherit;
+      display: block;
+      width: 100%;
+      border: none;
+      border-radius: 0px;
+      border-bottom: 1px solid var(--border-color);
+      background-color: transparent;
+      color: #666;
+      & option {
+        font-size: inherit;
+        line-height: 166.6%;
+      }
+    }
+  }
 }
 
-.ModalBoxContent {
-  max-width: unset;
-  box-sizing: border-box;
-  position: relative;
-  overflow-y: auto;
-  overflow-x: hidden;
-}
+// .ModalBoxContent {
+//   max-width: unset;
+//   box-sizing: border-box;
+//   position: relative;
+//   overflow-y: auto;
+//   overflow-x: hidden;
+// }
 
 // @media (min-width: 1100px) {
 //   .modal_container {
@@ -130,8 +150,24 @@
 //   }
 // }
 
-@media (min-width: 768px) {
+@media (min-width: 768px) and (max-width: 1100px) {
+  .filterBox-checkBox-group-list {
+    & .filterBox-checkBox-group {
+      & label {
+        max-width: 50vw;
+      }
+    }
+  }
+}
+
+@media (min-width: 1100px) {
+  .scienceLiteracy_history_download_modal {
+    max-height: 70vh;
+    grid-template-columns: repeat(3, 1fr);
+  }
+
   .filterBox-group {
+    width: 100%;
     & h4 {
       font-size: 19px;
     }
@@ -160,6 +196,7 @@
       font-size: 19px;
       & .filterBox-checkBox-group {
         & label {
+          max-width: 20vw;
           &::before {
             height: 18px;
             width: 18px;
@@ -171,18 +208,8 @@
         }
       }
     }
-  }
-}
-
-@media (min-width: 1100px) {
-  .scienceLiteracy_history_download_modal {
-    min-width: 75vw;
-    max-width: 78vw;
-    max-height: 75vh;
-    grid-template-columns: repeat(2, 1fr);
-  }
-
-  .filterBox-group {
-    width: 100%;
+    & .filterbox-selector {
+      font-size: 19px;
+    }
   }
 }
