--- a/教師版/css/index.css
+++ b/教師版/css/index.css
@@ -57,7 +57,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 1rem;
   border-top: 1px solid #e9ecef;
 }
 
@@ -79,13 +78,12 @@
   grid-template-columns: 1fr;
   grid-gap: 20px;
   margin: 0;
-  padding: 20px 10px 20px 10px;
 }
 
 .filterBox-group {
   display: flex;
   flex-direction: column;
-  width: 80vw;
+  width: 100%;
   margin: 0 auto;
 }
 .filterBox-group h4 {
@@ -94,7 +92,9 @@
 }
 
 .filterBox {
-  height: 100%;
+  height: 60vh;
+  display: flex;
+  flex-direction: column;
   border: 1px solid var(--border-color);
 }
 .filterBox .filterBox-input-group {
@@ -155,7 +155,6 @@
   line-height: 150%;
 }
 .filterBox .filterBox-checkBox-group-list {
-  height: 45vh;
   overflow-y: auto;
   font-size: 14px;
 }
@@ -166,7 +165,7 @@
 }
 .filterBox .filterBox-checkBox-group-list .filterBox-checkBox-group label {
   display: block;
-  width: 100%;
+  max-width: 60vw;
   overflow: hidden;
   word-wrap: break-word;
   white-space: nowrap;
@@ -185,16 +184,38 @@
   text-align: center;
   line-height: 150%;
 }
-
-.ModalBoxContent {
-  max-width: unset;
-  box-sizing: border-box;
-  position: relative;
-  overflow-y: auto;
-  overflow-x: hidden;
+.filterBox .filterbox-selector {
+  font-size: 14px;
+}
+.filterBox .filterbox-selector select {
+  padding: 10px 20px;
+  font-size: inherit;
+  display: block;
+  width: 100%;
+  border: none;
+  border-radius: 0px;
+  border-bottom: 1px solid var(--border-color);
+  background-color: transparent;
+  color: #666;
+}
+.filterBox .filterbox-selector select option {
+  font-size: inherit;
+  line-height: 166.6%;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 768px) and (max-width: 1100px) {
+  .filterBox-checkBox-group-list .filterBox-checkBox-group label {
+    max-width: 50vw;
+  }
+}
+@media (min-width: 1100px) {
+  .scienceLiteracy_history_download_modal {
+    max-height: 70vh;
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .filterBox-group {
+    width: 100%;
+  }
   .filterBox-group h4 {
     font-size: 19px;
   }
@@ -216,6 +237,9 @@
   .filterBox .filterBox-checkBox-group-list {
     font-size: 19px;
   }
+  .filterBox .filterBox-checkBox-group-list .filterBox-checkBox-group label {
+    max-width: 20vw;
+  }
   .filterBox .filterBox-checkBox-group-list .filterBox-checkBox-group label::before {
     height: 18px;
     width: 18px;
@@ -224,16 +248,8 @@
     height: 16px;
     width: 16px;
   }
-}
-@media (min-width: 1100px) {
-  .scienceLiteracy_history_download_modal {
-    min-width: 75vw;
-    max-width: 78vw;
-    max-height: 75vh;
-    grid-template-columns: repeat(2, 1fr);
-  }
-  .filterBox-group {
-    width: 100%;
+  .filterBox .filterbox-selector {
+    font-size: 19px;
   }
 }
 .topic_modal_title {
@@ -1073,6 +1089,10 @@ html {
   grid-template-columns: 1fr;
   grid-gap: 20px;
 }
+#content1 .alert-text {
+  font-size: 14px;
+  color: #e00;
+}
 
 .contant-custom,
 .contant-collapse {
@@ -1140,6 +1160,9 @@ html {
     font-size: 19px;
   }
   .search-btn {
+    font-size: 19px;
+  }
+  #content1 .alert-text {
     font-size: 19px;
   }
 }
