Add topic status open in new tag and fix radar topic <a> tag

--- a/學生版/css/index.css
+++ b/學生版/css/index.css
@@ -727,6 +727,7 @@ canvas {
   line-height: 166.3%;
 }
 .scienceLiteracyStatistics-data .card .card-body .card-info > span:nth-child(1), .scienceLiteracyStatistics-data .card .card-body .card-info > span:nth-child(2) {
+  cursor: pointer;
   text-decoration: underline;
 }
 .scienceLiteracyStatistics-data .card .card-body .card-info > span.wrong {
