--- a/學生版/css/_radar.scss
+++ b/學生版/css/_radar.scss
@@ -113,6 +113,7 @@ canvas {
 
           &:nth-child(1),
           &:nth-child(2) {
+            cursor: pointer;
             text-decoration: underline;
           }
 
