--- a/教師版/css/_radar.scss
+++ b/教師版/css/_radar.scss
@@ -117,6 +117,7 @@ canvas {
 
           &:nth-child(1),
           &:nth-child(2) {
+            cursor: pointer;
             text-decoration: underline;
           }
 
